[package]
name = "timetable-cli"
version = "0.1.0"
authors = ["bastioner <jsembasta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.1.1"
select = "0.5.0"
reqwest = { version = "0.10.8", features=["blocking"]}
tendril = "0.4.1" 
